--- a/templates/index.html
+++ b/templates/index.html
@@ -27,9 +27,10 @@
 		}
 		.container {
 			padding: 20px;
-			border: 5px solid orange;
+			border: 2px solid darkgray;
 			border-radius: 20px;
 			background-color: #222222;
+			box-shadow: 0px 0px 15px 5px orange;
 		}
 		input {
 			width: 100%;
@@ -51,7 +52,7 @@
 
 	<main>
 		<div class="container">
-			<form action="/link" method="post">
+			<form action="/output" method="post">
 				<label for="link">Enter link:<br></label>
   				<input autocomplete="off" type="text" id="link" name="link"><br><br>
 				<label for="preferred_url">Custom short url (optional)<br></label>
