--- a/templates/output.html
+++ b/templates/output.html
@@ -27,8 +27,9 @@
 		}
 		.container {
 			padding: 20px;
-			border: 5px solid orange;
+			border: 2px solid darkgray;
 			border-radius: 20px;
+			box-shadow: 0px 0px 15px 5px orange;
 			background-color: #222222;
 		}
 		input {
