--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 	<style>
-		main { 
+		body {
 			background-color: #0c0c0c;
 			opacity: 1;
 			background-image:  linear-gradient(30deg, #191919 12%, transparent 12.5%, transparent 87%, #191919 87.5%, #191919), linear-gradient(150deg, #191919 12%, transparent 12.5%, transparent 87%, #191919 87.5%, #191919), linear-gradient(30deg, #191919 12%, transparent 12.5%, transparent 87%, #191919 87.5%, #191919), linear-gradient(150deg, #191919 12%, transparent 12.5%, transparent 87%, #191919 87.5%, #191919), linear-gradient(60deg, #19191977 25%, transparent 25.5%, transparent 75%, #19191977 75%, #19191977), linear-gradient(60deg, #19191977 25%, transparent 25.5%, transparent 75%, #19191977 75%, #19191977);
@@ -31,6 +31,7 @@
 			border-radius: 20px;
 			background-color: #222222;
 			box-shadow: 0px 0px 15px 5px orange;
+			margin: auto;
 		}
 		input {
 			width: 100%;
@@ -40,11 +41,16 @@
 			background-color: #222222;
 			box-sizing: border-box;
 			color: white;
-			transition: 1s;
+			transition: 500ms;
 		}
 		.submit:hover {
 			background-color: #444444;
-			transition: 1s;
+			transform: scale(1.05);
+			transition: 500ms;
+		}
+		p {
+			margin-top: 0;
+			color: orange;
 		}
 	</style>	
 		<title>url.lucasvl.nl</title>
@@ -52,11 +58,14 @@
 
 	<main>
 		<div class="container">
+			<p>Expires in {{expires}}</p>
 			<form action="/output" method="post">
 				<label for="link">Enter link:<br></label>
   				<input autocomplete="off" type="text" id="link" name="link"><br><br>
 				<label for="preferred_url">Custom short url (optional)<br></label>
 				<input autocomplete="off" type="text" id="preferred_url" name="preferred_url"><br><br>
+				<label for="pass">Stats password (optional)<br></label>
+                                <input autocomplete="off" type="text" id="pass" name="pass"><br><br>
 				<input class="submit" type="submit" style="font-weight: bold;" value="Shorten!">
 			</form>
 		</div>
