--- a/templates/info.html
+++ b/templates/info.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 	<style>
-		body { 
+		body {
 			background-color: #0c0c0c;
 			opacity: 1;
 			background-image:  linear-gradient(30deg, #191919 12%, transparent 12.5%, transparent 87%, #191919 87.5%, #191919), linear-gradient(150deg, #191919 12%, transparent 12.5%, transparent 87%, #191919 87.5%, #191919), linear-gradient(30deg, #191919 12%, transparent 12.5%, transparent 87%, #191919 87.5%, #191919), linear-gradient(150deg, #191919 12%, transparent 12.5%, transparent 87%, #191919 87.5%, #191919), linear-gradient(60deg, #19191977 25%, transparent 25.5%, transparent 75%, #19191977 75%, #19191977), linear-gradient(60deg, #19191977 25%, transparent 25.5%, transparent 75%, #19191977 75%, #19191977);
@@ -29,37 +29,32 @@
 			padding: 20px;
 			border: 2px solid darkgray;
 			border-radius: 20px;
+			background-color: #222222;
 			box-shadow: 0px 0px 15px 5px orange;
-			background-color: #222222;
-			margin: auto;
+			margin: 50px;
+			margin-top: auto;
+			margin-bottom: auto;
+			max-width: 53ch;
 		}
-		input {
-			width: 100%;
-			height: 35px;
-			border: 2px solid gray;
-			border-radius: 5px;
-			background-color: #222222;
-			box-sizing: border-box;
-			color: white;
-			transition: 1s;
+		p {
+			color: orange;
 		}
-		.submit:hover {
-			background-color: #444444;
-			transition: 1s;
+		.error {
+			color: red;
 		}
-		p { 
-			color: white;
-			font-size: 30px;
-		}
-		a { color: white; }
 	</style>	
 		<title>url.lucasvl.nl</title>
 	</head>
 
 	<main>
 		<div class="container">
-			<p id="url"><a href="/l/{{url}}">{{domain}}/l/{{url}}</a></p>
-			<a href="/dash/{{url}}">Dashboard</a>
+			<h1>Info for url {{ url }}</h1>
+			<p>Redirects to: {{ link }}</p>
+			<p>Clicks: {{ clicks }}</p>
+			<p>Expires in: {{ expiry }} (resets after every click or edit)</p>
+			{% autoescape false %}
+			        {{ options }}
+			{% endautoescape %}
 		</div>
 	</main>
 </html>
