switched to proper password fields

--- a/templates/login.html
+++ b/templates/login.html
@@ -66,7 +66,7 @@
 			{% endautoescape %}
 			<form action="/dash/{{url}}" method="post">
 				<label for="link">Enter password for {{url}}:<br></label>
-  				<input autocomplete="off" type="text" id="pass" class="pass" name="pass"><br><br>
+  				<input autocomplete="off" type="password" id="pass" class="pass" name="pass"><br><br>
 				<input class="submit" type="submit" style="font-weight: bold;" value="Authenticate">
 				
 				<p><br/>Extra Options (Dangerous)</p>
