--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
 				<label for="preferred_url">Custom short url (optional)<br></label>
 				<input autocomplete="off" type="text" id="preferred_url" name="preferred_url"><br><br>
 				<label for="pass">Stats password (optional)<br></label>
-                                <input autocomplete="off" type="text" id="pass" name="pass"><br><br>
+                                <input autocomplete="off" type="password" id="pass" name="pass"><br><br>
 				<input class="submit" type="submit" style="font-weight: bold;" value="Shorten!">
 			</form>
 			<br>
@@ -90,7 +90,7 @@
 			<form action="/" method="post" class="more">
 				<br>
 				<label for="lookup">Dashboard for: {{domain}}/l/<br/></label>
-				<input type="text" id="lookup" name="lookup"><br><br>
+				<input autocomplete="off" type="text" id="lookup" name="lookup"><br><br>
 				<input class="submit" type="submit" style="font-weight: bold;" value="Find!">
 			</form>
 		</div>
