i dont remember what i changed other than the title
Signed-off-by: LucasVL <lucas@lucasvl.nl>

--- a/templates/404.html
+++ b/templates/404.html
@@ -39,8 +39,9 @@
 		h1 {
 			color: orange;
 		}
-	</style>	
-		<title>url.lucasvl.nl</title>
+	</style>
+		<link rel="icon" type="image/x-icon" href="/static/favi.png">
+		<title>URL Not Found</title>
 	</head>
 
 	<main>
