--- a/templates/errors.html
+++ b/templates/errors.html
@@ -42,8 +42,9 @@
 		.error {
 			color: red;
 		}
-	</style>	
-		<title>url.lucasvl.nl</title>
+	</style>
+		<link rel="icon" type="image/x-icon" href="/static/favi.png">
+		<title>{{title}}</title>
 	</head>
 
 	<main>
