--- a/templates/index.html
+++ b/templates/index.html
@@ -67,8 +67,9 @@
 		#toggle:checked ~ .more {
 			display: block;
 		}
-	</style>	
-		<title>url.lucasvl.nl</title>
+	</style>
+		<link rel="icon" type="image/x-icon" href="/static/favi.png">
+		<title>{{title}}</title>
 	</head>
 
 	<main>
@@ -84,7 +85,7 @@
 				<input class="submit" type="submit" style="font-weight: bold;" value="Shorten!">
 			</form>
 			<br>
-			<label for="toggle"><a>More</a></label>
+			<label for="toggle"><a>More/Less</a></label>
 			<input type="checkbox" id="toggle">
 			
 			<form action="/" method="post" class="more">
