--- a/templates/login.html
+++ b/templates/login.html
@@ -55,8 +55,9 @@
 		.red {
 			color: red;
 		}
-	</style>	
-		<title>url.lucasvl.nl</title>
+	</style>
+		<link rel="icon" type="image/x-icon" href="/static/favi.png">	
+		<title>Login to Access Dashboard</title>
 	</head>
 
 	<main>
