--- a/templates/output.html
+++ b/templates/output.html
@@ -52,8 +52,9 @@
 			font-size: 30px;
 		}
 		a { color: white; }
-	</style>	
-		<title>url.lucasvl.nl</title>
+	</style>
+		<link rel="icon" type="image/x-icon" href="/static/favi.png">	
+		<title>{{title}}</title>
 	</head>
 
 	<main>
