made usable on smaller screens

--- a/templates/404.html
+++ b/templates/404.html
@@ -42,6 +42,7 @@
 	</style>
 		<link rel="icon" type="image/x-icon" href="/static/favi.png">
 		<title>URL Not Found</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 
 	<main>
