--- a/templates/login.html
+++ b/templates/login.html
@@ -58,6 +58,7 @@
 	</style>
 		<link rel="icon" type="image/x-icon" href="/static/favi.png">	
 		<title>Login to Access Dashboard</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 
 	<main>
