--- a/templates/index.html
+++ b/templates/index.html
@@ -70,6 +70,7 @@
 	</style>
 		<link rel="icon" type="image/x-icon" href="/static/favi.png">
 		<title>{{title}}</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 
 	<main>
