--- a/templates/info.html
+++ b/templates/info.html
@@ -45,6 +45,7 @@
 	</style>
 		<link rel="icon" type="image/x-icon" href="/static/favi.png">	
 		<title>Dashboard for {{url}}</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 
 	<main>
