--- a/templates/output.html
+++ b/templates/output.html
@@ -31,6 +31,7 @@
 			border-radius: 20px;
 			box-shadow: 0px 0px 15px 5px orange;
 			background-color: #222222;
+			max-width: 100vw;
 			margin: auto;
 		}
 		input {
@@ -50,11 +51,14 @@
 		p { 
 			color: white;
 			font-size: 30px;
+			word-break: break-all;
+    			white-space: normal;
 		}
 		a { color: white; }
 	</style>
 		<link rel="icon" type="image/x-icon" href="/static/favi.png">	
 		<title>{{title}}</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 
 	<main>
