--- a/templates/info.html
+++ b/templates/info.html
@@ -53,7 +53,7 @@
 			<h1>Dashboard for url {{ url }}</h1>
 			<p>Redirects to: {{ link }}</p>
 			<p>Clicks: {{ clicks }}</p>
-			<p>Expires in: {{ expiry }} (resets after every click or edit)</p>
+			<p>Expires in: {{ expiry }}</p>
 			{% autoescape false %}
 			        {{ options }}
 			{% endautoescape %}
