--- a/templates/login.html
+++ b/templates/login.html
@@ -33,7 +33,7 @@
 			box-shadow: 0px 0px 15px 5px orange;
 			margin: auto;
 		}
-		.submit, .pass, .link {
+		.submit, .pass, .link, .expire {
 			width: 100%;
 			height: 35px;
 			border: 2px solid gray;
@@ -71,7 +71,7 @@
   				<input autocomplete="off" type="password" id="pass" class="pass" name="pass"><br><br>
 				<input class="submit" type="submit" style="font-weight: bold;" value="Authenticate">
 				
-				<p><br/>Extra Options (Dangerous)</p>
+				<p><br/>Extra Options (Optional)</p>
 				
 				<input type="checkbox" id="delete" name="delete">
 				<label for="delete">Delete URL</label><br/>
@@ -83,7 +83,10 @@
 				<label for="rscount">Reset counter</label><br/>
 
 				<label for="link">Enter a new link:<br></label>
-                                <input autocomplete="off" type="text" id="link" class="link" name="link">
+				<input autocomplete="off" type="text" id="link" class="link" name="link"><br><br>
+
+				<label for="expire">Hours until expires (max {{max_age}})<br/></label>
+                                <input autocomplete="off" type="number" id="expire" class="expire" name="expire" min="0" max="{{max_age}}" value="" step="0.1"><br><br>
 			</form>
 		</div>
 	</main>
