--- a/templates/login.html
+++ b/templates/login.html
@@ -8,6 +8,7 @@
 			background-image:  linear-gradient(30deg, #191919 12%, transparent 12.5%, transparent 87%, #191919 87.5%, #191919), linear-gradient(150deg, #191919 12%, transparent 12.5%, transparent 87%, #191919 87.5%, #191919), linear-gradient(30deg, #191919 12%, transparent 12.5%, transparent 87%, #191919 87.5%, #191919), linear-gradient(150deg, #191919 12%, transparent 12.5%, transparent 87%, #191919 87.5%, #191919), linear-gradient(60deg, #19191977 25%, transparent 25.5%, transparent 75%, #19191977 75%, #19191977), linear-gradient(60deg, #19191977 25%, transparent 25.5%, transparent 75%, #19191977 75%, #19191977);
 			background-size: 22px 39px;
 			background-position: 0 0, 0 0, 11px 19px, 11px 19px, 0 0, 11px 19px;
+			padding: 20px;
 		}
 		
 		html, body, main {
@@ -32,6 +33,8 @@
 			background-color: #222222;
 			box-shadow: 0px 0px 15px 5px orange;
 			margin: auto;
+			width: 80%;
+                        max-width: 500px;
 		}
 		.submit, .pass, .link, .expire {
 			width: 100%;
