fixed bug where some valid urls got marked invalid on the edit page

--- a/templates/login.html
+++ b/templates/login.html
@@ -89,7 +89,7 @@
 				<input autocomplete="off" type="text" id="link" class="link" name="link"><br><br>
 
 				<label for="expire">Hours until expires (max {{max_age}})<br/></label>
-                                <input autocomplete="off" type="number" id="expire" class="expire" name="expire" min="0" max="{{max_age}}" value="" step="0.1"><br><br>
+                                <input autocomplete="off" type="number" id="expire" class="expire" name="expire" min="0" max="{{max_age}}" value="" step="0.1"><br>
 			</form>
 		</div>
 	</main>
