--- a/templates/404.html
+++ b/templates/404.html
@@ -1,54 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+	<link rel="stylesheet" href="/static/style.css"/>
 	<style>
-		body {
-			background-color: #0c0c0c;
-			opacity: 1;
-			background-image:  linear-gradient(30deg, #191919 12%, transparent 12.5%, transparent 87%, #191919 87.5%, #191919), linear-gradient(150deg, #191919 12%, transparent 12.5%, transparent 87%, #191919 87.5%, #191919), linear-gradient(30deg, #191919 12%, transparent 12.5%, transparent 87%, #191919 87.5%, #191919), linear-gradient(150deg, #191919 12%, transparent 12.5%, transparent 87%, #191919 87.5%, #191919), linear-gradient(60deg, #19191977 25%, transparent 25.5%, transparent 75%, #19191977 75%, #19191977), linear-gradient(60deg, #19191977 25%, transparent 25.5%, transparent 75%, #19191977 75%, #19191977);
-			background-size: 22px 39px;
-			background-position: 0 0, 0 0, 11px 19px, 11px 19px, 0 0, 11px 19px;
-		}
-		
-		html, body, main {
-			color: white;
-			font-weight: bold;
-			font-family: monospace;
-			width: 100%;
-			height: 100%;
-			box-sizing: border-box;
-			margin: 0;
-			display: -webkit-flex;
-  			display: flex;
-  			-webkit-align-items: center;
-  			align-items: center;
-  			-webkit-justify-content: center;
-  			justify-content: center;
-		}
+		body { padding: 0px; }
 		.container {
-			padding: 20px;
-			border: 2px solid darkgray;
-			border-radius: 20px;
-			background-color: #222222;
-			box-shadow: 0px 0px 15px 5px orange;
 			margin: 50px;
 			margin-top: auto;
 			margin-bottom: auto;
 			max-width: 53ch;
 		}
-		h1 {
-			color: orange;
-		}
+		h1 { color: orange; }
+		p { color: white; }
 	</style>
 		<link rel="icon" type="image/x-icon" href="/static/favi.png">
 		<title>URL Not Found</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
-
 	<main>
 		<div class="container">
 			<h1>Error 404</h1>
-			<p>Could not find requested URL, please check for typos, or return <a href="/">home</a></p>
+			<p>Could not find requested URL. Please check for typos, or return <a href="/">home</a></p>
 		</div>
 	</main>
 </html>
