--- a/templates/index.html
+++ b/templates/index.html
@@ -1,76 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-	<style>
-		body {
-			background-color: #0c0c0c;
-			opacity: 1;
-			background-image:  linear-gradient(30deg, #191919 12%, transparent 12.5%, transparent 87%, #191919 87.5%, #191919), linear-gradient(150deg, #191919 12%, transparent 12.5%, transparent 87%, #191919 87.5%, #191919), linear-gradient(30deg, #191919 12%, transparent 12.5%, transparent 87%, #191919 87.5%, #191919), linear-gradient(150deg, #191919 12%, transparent 12.5%, transparent 87%, #191919 87.5%, #191919), linear-gradient(60deg, #19191977 25%, transparent 25.5%, transparent 75%, #19191977 75%, #19191977), linear-gradient(60deg, #19191977 25%, transparent 25.5%, transparent 75%, #19191977 75%, #19191977);
-			background-size: 22px 39px;
-			background-position: 0 0, 0 0, 11px 19px, 11px 19px, 0 0, 11px 19px;
-			padding: 20px;
-		}
-		
-		html, body, main {
-			color: white;
-			font-weight: bold;
-			font-family: monospace;
-			width: 100%;
-			height: 100%;
-			box-sizing: border-box;
-			margin: 0;
-			display: -webkit-flex;
-  			display: flex;
-  			-webkit-align-items: center;
-  			align-items: center;
-  			-webkit-justify-content: center;
-  			justify-content: center;
-		}
-		.container {
-			padding: 20px;
-			border: 2px solid darkgray;
-			border-radius: 20px;
-			background-color: #222222;
-			box-shadow: 0px 0px 15px 5px orange;
-			margin: auto;
-			width: 80%;
-			max-width: 500px;
-		}
-		input {
-			width: 100%;
-			height: 35px;
-			border: 2px solid gray;
-			border-radius: 5px;
-			background-color: #222222;
-			box-sizing: border-box;
-			color: white;
-			transition: 500ms;
-		}
-		.submit:hover {
-			background-color: #444444;
-			transform: scale(1.05);
-			transition: 500ms;
-		}
-		p {
-			margin-top: 0;
-			color: orange;
-		}
-		a { 
-			color: blue;
-			text-decoration: underline;
-		}
-		.more {
-			display: none;
-		}
-		#toggle {
-			position: fixed;
-			left: -99999px;
-			top: -99999px;
-		}
-		#toggle:checked ~ .more {
-			display: block;
-		}
-	</style>
+	  <link rel="stylesheet" href="/static/style.css">
 		<link rel="icon" type="image/x-icon" href="/static/favi.png">
 		<title>{{title}}</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
