--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #0c0c0c;
+	background-color: #0c0c0c;
 	opacity: 1;
 	background-image:  linear-gradient(30deg, #191919 12%, transparent 12.5%, transparent 87%, #191919 87.5%, #191919), linear-gradient(150deg, #191919 12%, transparent 12.5%, transparent 87%, #191919 87.5%, #191919), linear-gradient(30deg, #191919 12%, transparent 12.5%, transparent 87%, #191919 87.5%, #191919), linear-gradient(150deg, #191919 12%, transparent 12.5%, transparent 87%, #191919 87.5%, #191919), linear-gradient(60deg, #19191977 25%, transparent 25.5%, transparent 75%, #19191977 75%, #19191977), linear-gradient(60deg, #19191977 25%, transparent 25.5%, transparent 75%, #19191977 75%, #19191977);
 	background-size: 22px 39px;
@@ -17,10 +17,10 @@ html, body, main {
 	margin: 0;
 	display: -webkit-flex;
 	display: flex;
-  -webkit-align-items: center;
-  align-items: center;
-  -webkit-justify-content: center;
-  justify-content: center;
+	-webkit-align-items: center;
+	align-items: center;
+	-webkit-justify-content: center;
+	justify-content: center;
 }
 .container {
 	padding: 20px;
@@ -32,7 +32,12 @@ html, body, main {
 	width: 80%;
 	max-width: 500px;
 }
-input {
+input[type=checkbox] {
+        width: 13px;
+        height: 13px;
+}
+
+input, .submit, .pass, .link, .expire {
 	width: 100%;
 	height: 35px;
 	border: 2px solid gray;
@@ -41,16 +46,6 @@ input {
 	box-sizing: border-box;
 	color: white;
 	transition: 500ms;
-}
-.submit, .pass, .link, .expire {
-			width: 100%;
-			height: 35px;
-			border: 2px solid gray;
-			border-radius: 5px;
-			background-color: #222222;
-			box-sizing: border-box;
-			color: white;
-			transition: 500ms;
 }
 .submit:hover {
 	background-color: #444444;
