--- a/templates/index.html
+++ b/templates/index.html
@@ -10,14 +10,16 @@
 	<main>
 		<div class="container">
 			<form action="/output" method="post">
-				<label for="link">Enter link:<br></label>
-  				<input autocomplete="off" type="text" id="link" name="link"><br><br>
-				<label for="preferred_url">Custom short url (optional)<br></label>
-				<input autocomplete="off" type="text" id="preferred_url" name="preferred_url"><br><br>
-				<label for="pass">Stats password (optional)<br></label>
-                                <input autocomplete="off" type="password" id="pass" name="pass"><br><br>
+				<label for="link">Enter link:<br/></label>
+  				<input autocomplete="off" type="text" id="link" name="link"><br/><br/>
+				<label for="preferred_url">Custom short url (optional)<br/></label>
+				<input autocomplete="off" type="text" id="preferred_url" name="preferred_url"><br/><br/>
+				<label for="pass">Stats password (optional)<br/></label>
+                                <input autocomplete="off" type="password" id="pass" name="pass"><br/><br/>
 				<label for="expire">Hours until expires (max {{max_age}})<br/></label>
-				<input autocomplete="off" type="number" id="expire" name="expire" min="0" max="{{max_age}}" value="{{default_age}}" step="0.1"><br><br>
+				<input autocomplete="off" type="number" id="expire" name="expire" min="0" max="{{max_age}}" value="{{default_age}}" step="0.1"><br/>
+				<input type="checkbox" id="reset_on_click" name="reset_on_click">
+				<label for="reset_on_click">Reset on URL click</label><br/><br/>
 				<input class="submit" type="submit" style="font-weight: bold;" value="Shorten!">
 			</form>
 			<br>
@@ -27,7 +29,7 @@
 			<form action="/" method="post" class="more">
 				<br>
 				<label for="lookup">Dashboard for: {{domain}}/l/<br/></label>
-				<input autocomplete="off" type="text" id="lookup" name="lookup"><br><br>
+				<input autocomplete="off" type="text" id="lookup" name="lookup"><br/><br/>
 				<input class="submit" type="submit" style="font-weight: bold;" value="Find!">
 			</form>
 		</div>
