--- a/templates/info.html
+++ b/templates/info.html
@@ -7,7 +7,8 @@
 			margin: 50px;
 			margin-top: auto;
 			margin-bottom: auto;
-			max-width: 53ch;
+			width: 53ch;
+			word-break: break-all;
 		}
 		.error {
 			color: red;
@@ -21,7 +22,7 @@
 	<main>
 		<div class="container">
 			<h1>Dashboard for url {{ url }}</h1>
-			<p>Redirects to: {{ link }}</p>
+			<p>Redirects to: <a href="{{link}}">{{ link }}</a></p>
 			<p>Clicks: {{ clicks }}</p>
 			<p>Expires in: {{ expiry }}</p>
 			{% autoescape false %}
