--- a/static/style.css
+++ b/static/style.css
@@ -75,3 +75,19 @@ a {
 	display: block;
 }
 
+@media screen and (max-width: 400px){ 
+	#rc-imageselect, .g-recaptcha { 
+	transform: scale(0.9); 
+	-webkit-transform: scale(0.9); 
+	transform-origin: 0 0; 
+	-webkit-transform-origin: 0 0; 
+}
+
+@media screen and (max-width: 355px){
+        #rc-imageselect, .g-recaptcha {
+        transform: scale(0.7);
+        -webkit-transform: scale(0.7);
+        transform-origin: 0 0;
+        -webkit-transform-origin: 0 0;
+}
+
