--- a/static/style.css
+++ b/static/style.css
@@ -4,7 +4,6 @@ body {
 	background-image:  linear-gradient(30deg, #191919 12%, transparent 12.5%, transparent 87%, #191919 87.5%, #191919), linear-gradient(150deg, #191919 12%, transparent 12.5%, transparent 87%, #191919 87.5%, #191919), linear-gradient(30deg, #191919 12%, transparent 12.5%, transparent 87%, #191919 87.5%, #191919), linear-gradient(150deg, #191919 12%, transparent 12.5%, transparent 87%, #191919 87.5%, #191919), linear-gradient(60deg, #19191977 25%, transparent 25.5%, transparent 75%, #19191977 75%, #19191977), linear-gradient(60deg, #19191977 25%, transparent 25.5%, transparent 75%, #19191977 75%, #19191977);
 	background-size: 22px 39px;
 	background-position: 0 0, 0 0, 11px 19px, 11px 19px, 0 0, 11px 19px;
-	padding: 20px;
 }
 		
 html, body, main {
@@ -12,7 +11,7 @@ html, body, main {
 	font-weight: bold;
 	font-family: monospace;
 	width: 100%;
-	height: 100%;
+	min-height: 100vh;
 	box-sizing: border-box;
 	margin: 0;
 	display: -webkit-flex;
@@ -21,6 +20,12 @@ html, body, main {
 	align-items: center;
 	-webkit-justify-content: center;
 	justify-content: center;
+	flex-direction: column;
+}
+
+main {
+	padding: 20px;
+	padding-bottom: 0;
 }
 
 .container {
@@ -32,6 +37,9 @@ html, body, main {
 	margin: auto;
 	width: 80%;
 	max-width: 500px;
+}
+footer {
+	margin-top: 20px;
 }
 input[type=checkbox] {
         width: 13px;
