--- a/templates/index.html
+++ b/templates/index.html
@@ -37,5 +37,8 @@
 				<input class="submit" type="submit" style="font-weight: bold;" value="Find!">
 			</form>
 		</div>
+		<footer>
+			<p>Made by <a href="https://lucasvl.nl/">LucasVL</a></p>
+		</footer>
 	</main>
 </html>
