added footer to rest of pages

--- a/templates/404.html
+++ b/templates/404.html
@@ -22,5 +22,8 @@
 			<h1>Error 404</h1>
 			<p>Could not find requested URL. Please check for typos, or return <a href="/">home</a></p>
 		</div>
+		<footer>
+                        <p>Made by <a href="https://lucasvl.nl/">LucasVL</a></p>
+                </footer>
 	</main>
 </html>
