--- a/templates/errors.html
+++ b/templates/errors.html
@@ -27,5 +27,8 @@
 			{% endautoescape %}
 			</ul>
 		</div>
+		<footer>
+                        <p>Made by <a href="https://lucasvl.nl/">LucasVL</a></p>
+                </footer>
 	</main>
 </html>
