--- a/templates/info.html
+++ b/templates/info.html
@@ -29,5 +29,8 @@
 			        {{ options }}
 			{% endautoescape %}
 		</div>
+		<footer>
+                        <p>Made by <a href="https://lucasvl.nl/">LucasVL</a></p>
+                </footer>
 	</main>
 </html>
