--- a/templates/output.html
+++ b/templates/output.html
@@ -22,5 +22,8 @@
 			<p id="url"><a href="/l/{{url}}">{{domain}}/l/{{url}}</a></p>
 			<a href="/dash/{{url}}">Dashboard</a>
 		</div>
+		<footer>
+                        <p>Made by <a href="https://lucasvl.nl/">LucasVL</a></p>
+                </footer>
 	</main>
 </html>
