--- a/templates/login.html
+++ b/templates/login.html
@@ -38,5 +38,8 @@
                                 <input autocomplete="off" type="number" id="expire" class="expire" name="expire" min="0" max="{{max_age}}" value="" step="0.1"><br>
 			</form>
 		</div>
+		<footer>
+                        <p>Made by <a href="https://lucasvl.nl/">LucasVL</a></p>
+                </footer>
 	</main>
 </html>
