--- a/templates/404.html
+++ b/templates/404.html
@@ -5,9 +5,6 @@
 	<style>
 		body { padding: 0px; }
 		.container {
-			margin: 50px;
-			margin-top: auto;
-			margin-bottom: auto;
 			max-width: 53ch;
 		}
 		h1 { color: orange; }
@@ -23,7 +20,7 @@
 			<p>Could not find requested URL. Please check for typos, or return <a href="/">home</a></p>
 		</div>
 		<footer>
-                        <p>Made by <a href="https://lucasvl.nl/">LucasVL</a></p>
+                        <p class="orange">Made by <a href="https://lucasvl.nl/">LucasVL</a></p>
                 </footer>
 	</main>
 </html>
