--- a/templates/login.html
+++ b/templates/login.html
@@ -28,14 +28,14 @@
                                 <input type="checkbox" id="rscount" name="rscount">
 				<label for="rscount">Reset click counter</label><br/>
 				
-				<input type="checkbox" id="reset_on_click" name="reset_on_click">
-				<label for="reset_on_click">Reset auto-delete timer on URL click</label><br/>
+				<input type="checkbox" id="reset_on_click1" name="reset_on_click">
+				<label for="reset_on_click1">Reset auto-delete timer on URL click</label><br/>
 
 				<label for="link">New link:<br></label>
 				<input autocomplete="off" type="text" id="link" class="link" name="link"><br><br>
 
 				<label for="expire">Hours until expires (max {{max_age}})<br/></label>
-                                <input autocomplete="off" type="number" id="expire" class="expire" name="expire" min="0" max="{{max_age}}" value="" step="0.1"><br>
+                                <input autocomplete="off" type="number" id="expire" name="expire" min="0" max="{{max_age}}" value="" step="0.1"><br>
 			</form>
 		</div>
 		<footer>
