added og:image hopefully

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
 		<link rel="icon" type="image/x-icon" href="/static/favi.png">
 		<title>{{title}}</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta property="og:image" content="/static/favi.png"/>
 	</head>
 
 	<main>
