--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
 		<meta property="og:url" content="{{domain}}"/>
 		<meta property="og:description" content="{{title}}"/>
 		<meta property="og:image" content="/static/favi.png"/>
+		<meta name="twitter:card" content="{{title}}"/>
 	</head>
 
 	<main>
