--- a/templates/output.html
+++ b/templates/output.html
@@ -14,6 +14,12 @@
 		<link rel="icon" type="image/x-icon" href="/static/favi.png">	
 		<title>{{title}}</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="{{title}}">
+                <meta property="og:title" content="{{title}}"/>
+                <meta property="og:url" content="{{domain}}"/>
+                <meta property="og:description" content="{{title}}"/>
+                <meta property="og:image" content="/static/favi.png"/>
+                <meta name="twitter:card" content="{{title}}"/>
 	</head>
 
 	<main>
