made some links open in new tab

--- a/templates/404.html
+++ b/templates/404.html
@@ -26,7 +26,7 @@
 			<p>Could not find requested URL. Please check for typos, or return <a href="/">home</a></p>
 		</div>
 		<footer>
-                        <p class="orange">Made by <a href="https://lucasvl.nl/">LucasVL</a></p>
+                        <p class="orange">Made by <a href="https://lucasvl.nl/" target="_blank">LucasVL</a></p>
                 </footer>
 	</main>
 </html>
