--- a/templates/errors.html
+++ b/templates/errors.html
@@ -29,9 +29,10 @@
 			        {{ errors }}
 			{% endautoescape %}
 			</ul>
+			<a href="/">Return Home</a>
 		</div>
 		<footer>
-                        <p>Made by <a href="https://lucasvl.nl/">LucasVL</a></p>
+                        <p>Made by <a href="https://lucasvl.nl/" target="_blank">LucasVL</a></p>
                 </footer>
 	</main>
 </html>
