--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
 			</form>
 		</div>
 		<footer>
-			<p>Made by <a href="https://lucasvl.nl/">LucasVL</a></p>
+			<p>Made by <a href="https://lucasvl.nl/" target="_blank">LucasVL</a></p>
 		</footer>
 	</main>
 </html>
