--- a/templates/output.html
+++ b/templates/output.html
@@ -24,11 +24,11 @@
 
 	<main>
 		<div class="container">
-			<p id="url"><a href="/l/{{url}}">{{domain}}/l/{{url}}</a></p>
-			<a href="/dash/{{url}}">Dashboard</a>
+			<p id="url"><a href="/l/{{url}}" target="_blank">{{domain}}/l/{{url}}</a></p>
+			<a href="/dash/{{url}}" target="_blank">Dashboard</a>
 		</div>
 		<footer>
-                        <p>Made by <a href="https://lucasvl.nl/">LucasVL</a></p>
+                        <p>Made by <a href="https://lucasvl.nl/" target="_blank">LucasVL</a></p>
                 </footer>
 	</main>
 </html>
